# kompari

./: .typos.toml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
example/: Cargo.toml
example/demolib/: Cargo.toml
example/xtask_kompari/: Cargo.toml
example/xtask_kompari/src/: main.rs
kompari/: Cargo.toml
kompari-cli/: Cargo.toml  README.md
kompari-cli/src/: main.rs
kompari-cli/tests/: tests.rs
kompari-html/: Cargo.toml
kompari-html/src/: lib.rs  pageconsts.rs  report.rs  review.rs
kompari-tasks/: Cargo.toml  README.md
kompari-tasks/src/: args.rs  lib.rs  optimizations.rs  output.rs  task.rs
kompari/src/: dirdiff.rs  fsutils.rs  imageutils.rs  imgdiff.rs  lib.rs  minimal_image.rs  optimizations.rs  testutils.rs
kompari/tests/: compare.rs
kompari_cli/: Cargo.toml
kompari_cli/src/: main.rs
kompari_cli/tests/: tests.rs
kompari_html/: Cargo.toml
kompari_tasks/: Cargo.toml
kompari_tasks/src/: lib.rs
src/: fs.rs  lib.rs  pair.rs  report.rs  review.rs  xtask_cli.rs
tests/: test_report.sh
v2/: Cargo.toml
v2/kompari/: Cargo.toml  README.md
v2/kompari-app/: Cargo.toml
v2/kompari-cli/: Cargo.toml
v2/kompari-html/: Cargo.toml  README.md
v2/kompari-html/src/: lib.rs  pageconsts.rs  report.rs
v2/kompari-tasks/: Cargo.toml
v2/kompari-tasks/src/: args.rs  lib.rs
v2/kompari/src/: difference.rs  dirdiff.rs  fsutils.rs  imgdiff.rs  lib.rs  tests.rs
