[workspace]
resolver = "2"
members = ["kompari", "kompari-cli", "kompari-html", "kompari-tasks"]

[workspace.package]
version = "0.1.0"
edition = "2021"
# Keep in sync with RUST_MIN_VER in .github/workflows/ci.yml, with the relevant README.md files,
# and with the MSRV in the Unreleased section of CHANGELOG.md.
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/linebender/kompari"

[workspace.dependencies]
kompari = { version = "0.1.0", path = "kompari" }
kompari-html = { version = "0.1.0", path = "kompari-html" }
kompari-tasks = { version = "0.1.0", path = "kompari-tasks" }

assert_cmd = "2.2.0"
axum = "0.8.9"
base64 = "0.22.1"
bytemuck = { version = "1.25.0", default-features = false }
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
color = "0.3.2"
humansize = "2.1.3"
imagesize = { version = "0.14.0", default-features = false, features = ["png"] }
indicatif = "0.18.4"
log = "0.4.29"
maud = "0.27.0"
oxipng = { version = "10.1.0", features = [
    "parallel",
    "zopfli",
], default-features = false }
png = "0.18.1"
rayon = "1.12.0" # Make sure that we are using the version as in oxipng
serde = "1.0.228"
tempfile = "3.27.0"
termcolor = "1.4.1"
thiserror = { version = "2.0.18" }
tokio = "1.52.0"
walkdir = "2.5.0"

[workspace.lints]
# This one may vary depending on the project.
rust.unsafe_code = "forbid"

# LINEBENDER LINT SET - Cargo.toml - v6
# See https://linebender.org/wiki/canonical-lints/
rust.keyword_idents_2024 = "forbid"
rust.non_ascii_idents = "forbid"
rust.non_local_definitions = "forbid"
rust.unsafe_op_in_unsafe_fn = "forbid"

rust.elided_lifetimes_in_paths = "warn"
rust.missing_debug_implementations = "warn"
# rust.missing_docs = "warn"
# TODO: We should document things
rust.trivial_numeric_casts = "warn"
rust.unexpected_cfgs = "warn"
rust.unnameable_types = "warn"
rust.unreachable_pub = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_macro_rules = "warn"

clippy.too_many_arguments = "allow"

clippy.allow_attributes_without_reason = "warn"
clippy.cast_possible_truncation = "warn"
clippy.collection_is_never_read = "warn"
clippy.dbg_macro = "warn"
clippy.debug_assert_with_mut_call = "warn"
clippy.doc_markdown = "warn"
clippy.fn_to_numeric_cast_any = "warn"
clippy.infinite_loop = "warn"
clippy.large_stack_arrays = "warn"
clippy.mismatching_type_param_order = "warn"
clippy.missing_assert_message = "warn"
clippy.missing_fields_in_debug = "warn"
clippy.same_functions_in_if_condition = "warn"
clippy.semicolon_if_nothing_returned = "warn"
clippy.should_panic_without_expect = "warn"
clippy.todo = "warn"
clippy.unseparated_literal_suffix = "warn"
clippy.use_self = "warn"

clippy.cargo_common_metadata = "warn"
clippy.negative_feature_names = "warn"
clippy.redundant_feature_names = "warn"
clippy.wildcard_dependencies = "warn"
# END LINEBENDER LINT SET

[profile.ci]
inherits = "dev"
[profile.ci.package."*"]
debug-assertions = true # Keep always on for dependencies for cache reuse.
