[package]
name = "kompari-cli"
description = "CLI for reporting tool of image differences for snapshot testing."
keywords = ["image", "report", "diff", "tests"]
categories = ["graphics", "multimedia::images", "development-tools::testing"]


version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kompari = { workspace = true }
kompari-html = { workspace = true }
kompari-tasks = { workspace = true }

clap = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }
