[package]
name = "kompari-cli"
description = "CLI for detecting and reporting image differences."
keywords = ["image", "report", "diff", "tests"]
categories = ["graphics", "multimedia::images", "development-tools::testing"]

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]
kompari = { workspace = true }
kompari-html = { workspace = true }
kompari-tasks = { workspace = true }

clap = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
