[package]
name = "kompari-html"

description = "HTML reports for image differences for snapshot testing."
keywords = ["image", "report", "diff", "tests"]
categories = ["graphics", "multimedia::images", "development-tools::testing"]


version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kompari = { workspace = true, features = ["oxipng"] }

axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
imagesize = { workspace = true }
maud = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
