[package]
name = "kompari"
description = "Snapshot test reporting CLI.."
keywords = ["image", "report", "diff", "tests"]
categories = ["graphics", "multimedia::images", "development-tools::testing"]

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]
# For the bulk of Kompari's functionality
color = { version = "0.2.3", features = ["bytemuck"] }
png = { workspace = true }
thiserror = { workspace = true }
walkdir = "2.5"
log = { workspace = true }
oxipng = { workspace = true, optional = true }
rayon = { workspace = true }
bytemuck = { default-features = false, version = "1.22.0" }

[features]
default = ["oxipng"]
oxipng = ["dep:oxipng"]
