[package]
name = "kompari"
description = "Snapshot test reporting CLI.."
keywords = ["image", "report", "diff", "tests"]
categories = ["graphics", "multimedia::images", "development-tools::testing"]

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]
bytemuck = { workspace = true }
color = { workspace = true, features = ["bytemuck"] }
log = { workspace = true }
oxipng = { workspace = true, optional = true }
png = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }

[features]
default = ["oxipng"]
oxipng = ["dep:oxipng"]
