[package]
name = "kompari_html"
description = "HTML report generator for image differences."
keywords = ["image", "report", "diff", "tests"]
categories = ["graphics", "multimedia::images", "development-tools::testing"]

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]
kompari = { workspace = true, features = ["oxipng"] }

axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
imagesize = { workspace = true }
maud = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }

[lints]
workspace = true
