[package]
name = "kompari_tasks"
description = "Supportive code for Xtasks based on Kompari."
keywords = ["image", "report", "diff", "tests"]
categories = ["graphics", "multimedia::images", "development-tools::testing"]

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]
kompari = { workspace = true }
kompari_html = { workspace = true }

clap = { workspace = true }
humansize = { workspace = true }
indicatif = { workspace = true }
rayon = { workspace = true }
termcolor = { workspace = true }

[lints]
workspace = true
